<resources>
    <string name="app_name">CalcularPromApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="total">Total</string>
    <string name="et_promedio1">Ingrese Promedio</string>
    <string name="et_promedio2">Ingrese Promedio</string>

    <string name="cancel">Cancelar</string>
    <string name="save">Agregar</string>
    <string name="first_second">I,II Unidad</string>
    <string name="three">III Unidad</string>
    <string name="third">Final Unidad</string>


    <string-array name="array_TipoUnidad">
        <item>I Unidad</item>
        <item>II Unidad</item>
    </string-array>

    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>


    <string name="string_info_promedios">
        " INFL:%1$s\n"
        "INFL:%2$s\n"
        "EP :%3$s\n"
        "Date:%4$s\n"
    </string>

</resources>
