<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dimen_10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerTipo"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_TipoUnidad"
            android:gravity="center_horizontal" />




    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp">

        <EditText
            android:id="@+id/et_promedio1"
            style="@style/ExpenseTrackerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center"
            android:hint="@string/et_promedio1"
            android:inputType="numberDecimal"
            android:maxLines="2" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/et_promedio2"
            style="@style/ExpenseTrackerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center"
            android:hint="@string/et_promedio2"
            android:inputType="numberDecimal"
            android:maxLines="2" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_promedio3"
            style="@style/ExpenseTrackerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center"
            android:hint="@string/et_promedio2"
            android:inputType="numberDecimal"
            android:maxLines="2" />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_date"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="@dimen/dimen_12_10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Fecha" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="@dimen/dimen_12_10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="@dimen/dimen_12_10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>